# truce

./: .gitignore  README.md  sharpdev.yml
jaguar/: rand-pine.ino
jaguar-rust/: Cargo.toml
model/: README.md  pyproject.toml  sharpdev.yml
model/jaguar/: __main__.py
model/truce/: __main__.py  hyperparams.py  plots.py  tree-count.py  tree_count.py  utils.py
rand-pine/: rand-pine.ino
temp/: test.ino  with_timers.ino
truce-c/: README.md
truce-c/src/: main.c
truce-rust/: Cargo.toml  emg.cbm
