[tool.poetry]
name = "truce"
version = "0.1.0"
description = "A Random Forrest Classifier for EMG Data"
authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
numpy = "^1.23"
scikit-learn = "^1.2.1"
micromlgen = "^1.1.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
